# rerun-robotics-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/demo/: robot_model_runtime.h  trajectory_dispatcher.h
src/: main.cpp  main_new.cpp  main_showcase.cpp  robot_model_runtime.cpp  trajectory_dispatcher.cpp
